--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,13 @@ environment:
 dependencies:
   dio: ^5.7.0
   dotenv: ^4.2.0
+  # openapi_generator_annotations: ^6.1.0
+  
   # path: ^1.8.0
 
 dev_dependencies:
+  # build_runner: ^2.4.14
   lints: ^5.0.0
+  # openapi_generator: ^6.1.0
   test: ^1.24.0
+  
