--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  dotenv: ^4.2.0
+  
   polar_dart:
-    path: ./
+    path: ../
+  flutter_dotenv: ^5.2.1
 
 
 
